@@ -15,6 +15,9 @@
  * Fix Windows path handling in ``_ensure_parent_dir_exists`` to correctly
    handle drive letters during checkout operations. (Jelmer Vernooĳ, #1751)
 
+ * Fix Windows config loading to only use current Git config path,
+   avoiding loading older config files.  (Jelmer Vernooĳ, #1732)
+
 0.24.1	2025-08-01
 
  * Require ``typing_extensions`` on Python 3.10.
